bases/apps/uptime/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: uptime
    app.kubernetes.io/name: uptime
  annotations:
   cert-manager.io/cluster-issuer: default-clusterissuer
  name: uptime-ingress
spec:
  tls:
  - hosts:
    - uptime.local
    secretName: uptime-cert
  rules:
  - host: uptime.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime
            port:
              name: http
